kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micser-prod
  namespace: production
  labels:
    app: micser-prod
spec:
  selector:
    app: micser-prod
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 8081
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
